--- a/Project506/app/build.gradle
+++ b/Project506/app/build.gradle
@@ -1,5 +1,6 @@
 plugins {
     id 'com.android.application'
+    id 'org.jetbrains.kotlin.android'
 }
 
 android {
@@ -25,10 +26,20 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+    kotlinOptions {
+        jvmTarget = '1.8'
+    }
 }
 
 dependencies {
+    def retrofit_version = "2.9.0"
+    implementation "com.squareup.retrofit2:retrofit:$retrofit_version"          // Retrofit2
+    implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"    // Retrofit2 Gson converter
+    implementation("com.squareup.okhttp3:logging-interceptor:4.10.0")           // okhttp3
+    implementation 'com.github.bumptech.glide:glide:4.13.0'                     // Glide
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.13.0'             // Glidecompiler
 
+    implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.appcompat:appcompat:1.4.2'
     implementation 'com.google.android.material:material:1.6.1'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
