--- a/Project-506/app/build.gradle
+++ b/Project-506/app/build.gradle
@@ -36,6 +36,7 @@ android {
 
 dependencies {
 
+    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     def retrofit_version = "2.9.0"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"          // Retrofit2
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"    // Retrofit2 Gson converter
